# ONTraC

./: .gitignore  CHANGELOG.md  Environment_setup.md  LICENSE  MANIFEST.in  README.md  README.rst  cleanCache.sh  environment.yml  pyproject.toml  setup.py
.github/workflows/: building_conda.yml  python-package.yml
Examples/: Stereo_seq_example.md
Examples/stereo_seq_brain/: Stereo_seq_example.md
Examples/stereo_seq_brain/stereo_seq_final_preprocessing_dir/: E12_E1S3_Coordinates.csv  E14_E1S3_Coordinates.csv  E14_E1S3_NicheWeightMatrix.npz  E16_E2S6_Coordinates.csv  cell_type_code.csv  samples.yaml
ONTraC/: data.py  version.py
ONTraC.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ONTraC/ONTraC.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ONTraC/analysis/: anndata.py  cell_type.py  constants.py  data.py  niche_cluster.py  train_loss.py  utils.py
ONTraC/example_files/: example_data.yaml
ONTraC/model/: _model.py  dmon_exp_pool.py  gcn_norm_conv.py  norm_dense_graph_conv.py  utils.py
ONTraC/optparser/: _GP.py  _GSAE.py  _GSAP.py  _IO.py  _NP.py  _NT.py  _ONTraC.py  __init__.py  _create_dataset.py  _pseudotime.py  _train.py
ONTraC/run/: processes.py
ONTraC/train/: _batch_train.py  _single_train.py  inspect_funcs.py  loss_funs.py
ONTraC/utils/: NTScore.py  _utils.py  construct_niche_network.py  niche_net_constr.py  pseudo_time.py
conda-recipe/: README.md  build_conda.sh  meta.yaml
data/stereo_seq_brain/: E12_E1S3_CellTypeLabel.csv  E12_E1S3_Coordinates.csv  E12_E1S3_NodeAttr.csv  E14_E1S3_CellTypeLabel.csv  E14_E1S3_Coordinates.csv  E14_E1S3_NodeAttr.csv  E16_E1S3_CellTypeLabel.csv  E16_E1S3_Coordinates.csv  E16_E1S3_NodeAttr.csv  E16_E2S6_CellTypeLabel.csv  E16_E2S6_Coordinates.csv  E16_E2S6_NodeAttr.csv  E16_E2S7_CellTypeLabel.csv  E16_E2S7_Coordinates.csv  E16_E2S7_NodeAttr.csv  data.yaml  original_data.csv
docs/: api_reference_generation.md  api_reference_transfer.md
examples/: README.md
examples/V2/: ONTraC_running_commands.sh
examples/V2/data/: celltypexgexp.csv  merfish_embedding.csv  merfish_meta.csv  spotxcelltype.csv  visium_metadata.csv
examples/code_for_paper_reproduce/: README.md  Running_ONTraC_on_merfish_dataset.ipynb  Running_ONTraC_on_simulated_dataset.ipynb  Running_ONTraC_on_simulation_dataset.ipynb  Running_ONTraC_on_stereo_seq_dataset.ipynb  Simulated_dataset.md  simulated_data_generation.Rmd  simulation_data_generation.Rmd
examples/simulation/: README.md  original_data.csv  pseudotime_output.csv
examples/stereo_seq_brain/: Stereo_seq_example.md  original_data.csv
examples/stereo_seq_brain/stereo_seq_final_GNN/: epoch_0.pt  model_state_dict.pt
examples/stereo_seq_brain/stereo_seq_final_preprocessing_dir/: E12_E1S3_NicheWeightMatrix.npz  E16_E1S3_Coordinates.csv  E16_E1S3_NicheWeightMatrix.npz  E16_E2S6_NicheWeightMatrix.npz  E16_E2S7_Coordinates.csv  E16_E2S7_NicheWeightMatrix.npz
scripts/: cleanCache.sh  generate_api_reference.py
src/ONTraC/: __init__.py  constants.py  data.py  log.py  version.py
src/ONTraC/GNN/: _GNN.py  __init__.py
src/ONTraC/analysis/: __init__.py  cell_type.py  constants.py  data.py  meta_info.py  niche_cluster.py  niche_net.py  niche_net_constr.py  spatial.py  train_loss.py  trajectory.py  utils.py
src/ONTraC/integrate/: __init__.py  general_control.py
src/ONTraC/model/: __init__.py  _model.py  dmon_exp_pool.py  norm_dense_gcn_conv.py  norm_gcn_conv.py
src/ONTraC/niche_net/: __init__.py  _niche_net.py  preprocessing.py
src/ONTraC/niche_trajectory/: __init__.py  _niche_trajectory.py  algorithm.py
src/ONTraC/optparser/: _GNN.py  _GP.py  _IO.py  _NN.py  _NT.py  _ONTraC.py  __init__.py  _analysis.py  _create_dataset.py  _preprocessing.py  _train.py  command.py
src/ONTraC/preprocessing/: __init__.py  __inti__.py  data.py  expression.py  pp_control.py
src/ONTraC/run/: __init__.py  processes.py
src/ONTraC/train/: __init__.py  _batch_train.py  inspect_funcs.py  loss_funs.py
src/ONTraC/utils/: NTScore.py  STdeconvolve.R  __init__.py  _utils.py  decorators.py  niche_net_constr.py
tests/: test_GNN.py  test_analysis.py  test_niche_net.py  test_niche_trajectory.py  test_optparser.py  utils.py
tests/_data/: test_data.csv
tests/_data/GNN/: epoch_0.pt  epoch_1.pt
tests/_data/NN/: S1_NicheWeightMatrix.npz  S2_Coordinates.csv  samples.yaml
tests/_data/preprocessing/: S1_Coordinates.csv  S2_NicheWeightMatrix.npz  cell_type_code.csv
tutorial/: post_analysis.md
tutorials/: IO_files.md  README.md  installation.md  niche_cluster.md  parameters.md  post_analysis.md
