[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ONTraC"
authors = [
          {name = "Wen Wang", email = "wwang.bio@gmail.com"},
          {name = "Shiwei Zheng", email = "swzheng29@gmail.com"},
          {name = "Sujung Crystal Shin", email = "sjcshin5040@gmail.com"},
          {name = "Joselyn C. Chávez-Fuentes", email = "joselynchavezf@gmail.com"},
          {name = "Guo-Cheng Yuan", email = "gcyuan@gmail.com"},
          ]
description = "A niche-centered, machine learning method for constructing spatially continuous trajectories"
readme = "README.md"
requires-python = ">=3.10,<3.13"
keywords = ["graph neural network", "pytorch", "pytorch geometric", "trajectory inference", "spatial omics"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "pyyaml==6.0.1",
    "pandas==2.2.1",
    "scipy>=1.14.0,<1.15.0a0",
    "torch>=2.7.1-rc1,<2.8.0a0",
    "torch-geometric>=2.6.0,<2.7.0a0",
    "umap-learn==0.5.6",
    "harmonypy==0.0.10",
    "leidenalg==0.10.2",
    "session-info"
]
dynamic = ["version"]

[project.optional-dependencies]
analysis = [
    "matplotlib<3.9",
    "seaborn"]
test = [
    "matplotlib<3.9",
    "seaborn",
    "pytest",
    "black",
    "flake8",
    "isort",
    "mypy",]
dev = [
    "matplotlib<3.9",
    "seaborn",
    "pytest",
    "black",
    "flake8",
    "isort",
    "mypy",
    "pre-commit",
    "setuptools",
    "twine",
    "build"]

[project.scripts]
ONTraC = "ONTraC.bin.ONTraC:main"
ONTraC_NN = "ONTraC.bin.ONTraC_NN:main"
ONTraC_GNN = "ONTraC.bin.ONTraC_GNN:main"
ONTraC_GT = "ONTraC.bin.ONTraC_GT:main"
ONTraC_NT = "ONTraC.bin.ONTraC_NT:main"
ONTraC_analysis = "ONTraC.bin.ONTraC_analysis:main"
createDataSet = "ONTraC.bin.createDataSet:main"
NicheTrajectory = "ONTraC.bin.NicheTrajectory:main"
ONTraC_GP = "ONTraC.bin.ONTraC_GP:main"

[project.urls]
Homepage = "https://github.com/gyuanlab/ONTraC"
"Repository" = "https://github.com/gyuanlab/ONTraC"
"Issue Tracker" = "https://github.com/gyuanlab/ONTraC/issues"

[tool.setuptools.dynamic]
version = {attr = "ONTraC.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ONTraC.external" = ["STdeconvolve.R"]
